crates/nota-tui/tests/snapshots/setup_screen__setup_too_small.snap
---
source: crates/nota-tui/tests/setup_screen.rs
expression: terminal.backend()
---
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"              make the window larger              "
"                 nota needs 60×20                 "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
